Fix for Home Error Hidden By Footer

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -334,6 +334,7 @@ select:focus {
   margin-left: auto;
   margin-right: auto;
   margin-top: 8px;
+  z-index: 1;
 
   color: #cc0033;
   font-size: 13.5px;
